tests/baselines/reference/decoratorOnClassMethod10.errors.txt
tests/cases/conformance/decorators/class/method/decoratorOnClassMethod10.ts(4,6): error TS2345: Argument of type 'C' is not assignable to parameter of type 'Function'.
  Index signature is missing in type 'Function'.


==== tests/cases/conformance/decorators/class/method/decoratorOnClassMethod10.ts (1 errors) ====
    declare function dec(target: Function, paramIndex: number): void;
    
    class C {
        @dec method() {}
         ~~~
!!! error TS2345: Argument of type 'C' is not assignable to parameter of type 'Function'.
!!! error TS2345:   Index signature is missing in type 'Function'.
    }